# agent-Resume-SEO

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  text.py
app/: __init__.py  agents.py  tools.py
app/agents/: evaluate_resume_agent.py  orchestrator.py  seo_resume_agent.py  web_agent.py
app/agents/promts/: evaluate_resume_promt.py  seo_resume_promt.py
app/database/: __init__.py  base.py  db_manager.py
app/database/models/: evaluate.py  resume.py
app/promts/: system_promt.py
app/schemas/: models.py
app/tools/: evaluate_tools.py  resume_tools.py
scripts/: init_db.py
